tests/invalid/bad_atomic_imm.s
  .text

  .global _start
_start:
  fada r1, r2, [r3, 0xFE0]
